--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
 		<meta charset="utf-8">
 		<title>Profiler</title>
 		<script>
-			window.profiler = {
-				start: new Date()
-			}
+			window.__profiler__start__ = (new Date()).valueOf();
 		</script>
 		<script src="src/report.js"></script>
 		<script src="src/profiler.js"></script>
 	</head>
 	<body>
-
+		Hello
 	</body>
 </html>
