Create dev build

--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
 		<script>
 			window.__profiler__start__ = (new Date()).valueOf();
 		</script>
-		<script src="src/lang/typeof.js"></script>
-		<script src="src/lang/each.js"></script>
-		<script src="src/lang/filter.js"></script>
-		<script src="src/report.js"></script>
-		<script src="src/profiler.js"></script>
+		<script src="build/profiler.js"></script>
 	</head>
 	<body>
 		Hello
