Fix records with the same name

--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 		<script src="build/profiler.js"></script>
     <script>
       profiler.start('test a');
+      profiler.start('test a');
+      profiler.start('test a');
       var i = 1000000;
       while (i--) {
         var b = i * i;
       }
       profiler.end('test a');
+      profiler.end('test a');
+      profiler.end('test a');
+      console.log(profiler.report().records);
     </script>
 	</head>
 	<body>
