--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Profiler</title>
-    <script>
-      window.__profiler__start__ = (new Date()).valueOf();
-    </script>
     <script src="build/profiler.js"></script>
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css"/>
+    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
     <script>
       profiler.start('test a');
       profiler.start('test a');
@@ -28,5 +27,13 @@
   </head>
   <body>
     Hello
+    <img src="http://farm4.staticflickr.com/3696/8811041586_d3975154e4_c.jpg" alt=""/>
+    <img src="http://farm3.staticflickr.com/2817/8806251646_feb4333c86_o.jpg" alt=""/>
+    <img src="http://farm3.staticflickr.com/2879/8805431526_732f27a085_b.jpg" alt=""/>
+
+    <script src="http://code.jquery.com/jquery-1.10.0.js"></script>
+    <script src="http://underscorejs.org/underscore.js"></script>
+    <script src="http://backbonejs.org/backbone.js"></script>
+    <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
   </body>
 </html>
