--- a/index.html
+++ b/index.html
@@ -4,25 +4,34 @@
     <meta charset="utf-8">
     <title>Profiler</title>
     <script src="build/profiler.js"></script>
+    <script src="test/fixture/xhr.js"></script>
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css"/>
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
     <script>
-      profiler.start('test a');
-      profiler.start('test a');
-      profiler.start('test a');
-      var i = 1000000;
-      while (i--) {
-        var b = i * i;
-      }
-      profiler.end('test a');
-      profiler.end('test a');
-      profiler.end('test a');
-
       profiler.setup({
-        url: 'http://google.com',
-        interval: 30,
-        firstInterval: 5
+        firstInterval: 5,
+        interval: 10,
+        url: 'test-url'
       });
+
+      //profiler.startReporting();
+
+//      profiler.start('test a');
+//      profiler.start('test a');
+//      profiler.start('test a');
+//      var i = 1000000;
+//      while (i--) {
+//        var b = i * i;
+//      }
+//      profiler.end('test a');
+//      profiler.end('test a');
+//      profiler.end('test a');
+//
+//      profiler.setup({
+//        url: 'http://google.com',
+//        interval: 30,
+//        firstInterval: 5
+//      });
     </script>
   </head>
   <body>
