--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Profiler</title>
-    <script src="build/profiler.test.js"></script>
-    <!--<script src="build/profiler.js"></script>-->
-    <!--<script src="test/fixture/xhr.js"></script>-->
-    <!--<link rel="stylesheet" href="http://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css"/>-->
-    <!--<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">-->
+    <script src="build/profiler.js"></script>
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css"/>
+    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
     <script>
       profiler.start('test a');
       profiler.start('test a');
@@ -20,22 +18,32 @@
       profiler.end('test a');
       profiler.end('test a');
 
+      profiler.count('a');
+
       profiler.setup({
         url: 'http://google.com',
         interval: 30,
         firstInterval: 5
       });
+
+      profiler.setup({
+        firstInterval: 5,
+        interval: 10,
+        url: 'http://google_.com'
+      });
+
+      profiler.startReporting();
     </script>
   </head>
   <body>
     Hello
-    <!--<img src="http://farm4.staticflickr.com/3696/8811041586_d3975154e4_c.jpg" alt=""/>-->
-    <!--<img src="http://farm3.staticflickr.com/2817/8806251646_feb4333c86_o.jpg" alt=""/>-->
-    <!--<img src="http://farm3.staticflickr.com/2879/8805431526_732f27a085_b.jpg" alt=""/>-->
+    <img src="http://farm4.staticflickr.com/3696/8811041586_d3975154e4_c.jpg" alt=""/>
+    <img src="http://farm3.staticflickr.com/2817/8806251646_feb4333c86_o.jpg" alt=""/>
+    <img src="http://farm3.staticflickr.com/2879/8805431526_732f27a085_b.jpg" alt=""/>
 
-    <!--<script src="http://code.jquery.com/jquery-1.10.0.js"></script>-->
-    <!--<script src="http://underscorejs.org/underscore.js"></script>-->
-    <!--<script src="http://backbonejs.org/backbone.js"></script>-->
-    <!--<script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>-->
+    <script src="http://code.jquery.com/jquery-1.10.0.js"></script>
+    <script src="http://underscorejs.org/underscore.js"></script>
+    <script src="http://backbonejs.org/backbone.js"></script>
+    <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
   </body>
 </html>
